# polls

./: .gitignore  README.md  dashboard.html  events.json  extract_polls.py  index.html  main.py  plot.ipynb  poll.html  polling_results.json  pyproject.toml  run_output.txt
.github/workflows/: update-polls.yml
data/processed/: events.json  polling_data.json  polling_results.json  pollster_biases.json
data/raw/: poll.html
notebooks/: plot.ipynb
