[project]
name = "polls"
version = "0.1.0"
description = "UK Polling Data Scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "pyarrow>=14.0.0",
    "matplotlib>=3.10.9",
    "pymc>=5.28.4",
    "patsy>=1.0.2",
    "nutpie[pymc]>=0.16.8",
]
